# AgentForge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTFORGE_30_DAY_PLAN.md  AGENTFORGE_COUNTER_ANALYSIS.md  AGENTFORGE_STRATEGIC_REVIEW.md  AGENTFORGE_STRATEGIC_VALIDATION_AUDIT.md  AGENTFORGE_V1_MASTER_ASSESSMENT.md  AGENTS.md  AGENT_QUALITY_AUDIT_REPORT.md  AGENT_SYSTEM_GAP_REPORT.md  AI_DEVELOPMENT_OS_AUDIT_REPORT.md  BENCHMARK_SHOWCASE_PRD.md  BYOK_ARCHITECTURE_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_AUDIT_REPORT.md  COLLABORATION_EFFECTIVENESS_REPORT.md  COMPETITIVE_ADVANTAGE_REPORT.md  COMPOSE_VERIFICATION.md  CONTAINER_TEST_REPORT.md  CONTRIBUTING.md  DEMO_COMPARISON_PRD.md  DEMO_IMPACT_REPORT.md  DEMO_READINESS_REPORT.md  DEPENDENCY_RECONCILIATION_REPORT.md  DEPLOYMENT_READINESS_REPORT.md  DEVOPS_REPORT.md  DIFFERENTIATION_STRATEGY.md  DOCKER_FINAL_READINESS.md  DOCKER_RELEASE_SIGNOFF.md  DOCUMENT_AUDIT.md  Dockerfile  EXECUTION_SANDBOX_SUMMARY.md  FEATURE_TRUTH_AUDIT_REPORT.md  FINAL_REPOSITORY_AUDIT.md  FOUNDER_REPORT.md  GITHUB_INTEGRATION_GAP_REPORT.md  GITHUB_WORKFLOW_SUMMARY.md  (+51 more)
apps/api/: .env.example  BENCHMARK_README.md  Dockerfile  README.md  benchmark.py  benchmark_load.py  benchmark_scientific.py  benchmark_simplified.py  fast_demo_benchmark.py  locustfile.py  main.py  pyproject.toml  requirements.txt
apps/api/agents/: __init__.py  graph.py  orchestrator.py  sanitize.py  state.py  utils.py
apps/api/app/: auth.py  feedback_service.py  file_parser.py  main.py  memory_service.py
apps/api/benchmarks/: __init__.py  report.py  runner.py  scorer.py
apps/api/core/: config.py  database.py  dependencies.py  encryption.py  exceptions.py  lifespan.py  logging.py  logging_config.py  model_registry.py  observability.py  providers.py  redis.py  security.py  task_tracker.py  validation.py
apps/api/dependencies/: auth.py  database.py  redis.py
apps/api/evals/: __init__.py  cases.py  harness.py
apps/api/middleware/: error_handler.py  logging_middleware.py  request_context.py
apps/api/migrations/: 001_initial.sql  002_benchmark_schema.sql  003_template_support.sql  004_byok.sql  005_auth_and_migration_tracking.sql  006_projects_and_files.sql  007_repository_context.sql  008_analytics.sql  009_memories.sql  010_add_parallel_agent_roles.sql  011_add_execution_analytics_columns.sql  012_add_message_type_aggregator.sql  013_bcrypt_passwords.sql  014_authz_indexes.sql  015_refresh_tokens.sql  016_finding_feedback.sql  017_github_integration.sql  018_byok_enhancements.sql  019_add_planner_and_deployment_roles.sql  020_add_missing_message_types.sql  021_add_research_and_documentation_message_types.sql  022_add_pgvector_memories.sql
apps/api/models/: agent_outputs.py  schemas.py
apps/api/routes/: auth.py  health.py  settings.py  websocket.py  workflows.py
apps/api/schemas/: auth.py  common.py  memory.py  websocket.py  workflow.py
apps/api/services/: auth_service.py  websocket_service.py  workflow_service.py
apps/api/tests/: README.md  conftest.py  test_agent_outputs.py  test_auth.py  test_benchmark.py  test_concurrency.py  test_e2e_full_flow.py  test_evals.py  test_evidence_gate.py  test_executions.py  test_feedback.py  test_file_parser.py  test_github.py  test_graph.py  test_health.py  test_keys.py  test_memory_service.py  test_migrations.py  test_projects_authz.py  (+10 more)
apps/cli/: README.md  pyproject.toml
(+825 files in other folders)
