[project]
name = "agentforge-api"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]
markers = ["asyncio: asyncio tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-include = ["*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "UP038"]

[tool.coverage.run]
source = ["app", "core", "agents", "models"]
omit = [
    "*/test_*",
    "*/conftest.py",
    "*/migrations/*",
    "*/benchmark*.py",
    "*/prompts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    '^venv/',
    '^\.venv/',
    '^node_modules/',
]
